Update -Add writer to db -Add rectangleList reader page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,13 @@
     <button type="submit">Отправить</button>
 </form>
 <a href="sum">sum page</a>
+<br>
 <button type="button" onclick="location.href='rectangle';">
     Rectangle
+</button>
+<br>
+<button type="button" onclick="location.href='rectangles';">
+    RectangleList
 </button>
 </body>
 </html>
