Refactor + text file reader

--- a/src/main/resources/templates/rectangles.html
+++ b/src/main/resources/templates/rectangles.html
@@ -13,8 +13,8 @@
     <option value="dbTable">Из базы даных</option>
   </select>
   <br>
-  <label for="destination">Введите источник:</label>
-  <input type="text" name="destination" id="destination" required>
+  <label for="source">Введите источник:</label>
+  <input type="text" name="source" id="source" required>
   <br>
   <button type="submit">Загрузить</button>
 </form>
